--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: #FED7B0;
+    background-color linear gradient(#FED7B0,#FFFFEE);
     margin-top: 75px;
 }
 
