[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color linear gradient(#FED7B0,#FFFFEE);
+    background-color: linear gradient(#FED7B0,#FFFFEE);
     margin-top: 75px;
 }
 
