--- a/ui/style.css
+++ b/ui/style.css
@@ -19,3 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
+
+.container {
+max-width: 800px;
+margin: 0 auto;
+color: #6a6a88;
+font-family: sans-serif;
+padding-top: 125px;
+padding-left: 20px;
+padding-right: 20px;
+}        
